--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ asg1-dc-bigint/code/scanner.o
 asg1-dc-bigint/code/ubigint.o
 asg1-dc-bigint/code/util.o
 asg1-dc-bigint/code/ydc
+asg1-dc-bigint/code/ydc
